@@ -248,6 +248,7 @@ define function, begin
 226,systemday,0               #returns system day
 227,systemmonth,0             #returns system month
 228,systemyear,0              #returns system year
+229,stringequal,2,0,0	      #returns whether two strings are the same(stringID1, stringID2)
 229,stringcompare,2,0,0	      #returns whether two strings are the same(stringID1, stringID2)
 230,readenemydata,2,0,0       #reads enemy data(enemy,dataposition)
 231,writeenemydata,3,0,0,0    #writes enemy data(enemy,dataposition,value)
