@@ -168,6 +168,7 @@ Septemtober ? 2019 [Fufluns]
     * "last menu item", "menu item count", "visible menu item count" [Ralph]
     * "close menu" gains "run close script" argument [Ralph]
     * Plotscripting Dictionary shows list of commands in each section [Ralph]
+    * "string equal" as alias for "string compare"
 
   * Changes
     * "Previous attack" base ATK stat renamed to "Last damage by attacker"
